--- a/Job_Recommendation_System.ipynb
+++ b/Job_Recommendation_System.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "jobs = pd.read_csv('Combined_Jobs_Final.csv')\n",
+    "jobs = pd.read_csv('modified.csv')\n",
     "experience = pd.read_csv('Experience.csv')\n",
     "job_view = pd.read_csv('Job_Views.csv')\n",
     "position = pd.read_csv('Positions_Of_Interest.csv')\n",
